--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "poi",
     "build": "poi build",
     "sync-dist": "git submodule update --init --recursive",
-    "push-dist": "cd $PWD/dist && git add . && git commit -am\"Release\" && git push cd -",
+    "push-dist": "cd $PWD/dist && git add . && git commit -am\"Release\" && git push origin master && cd -",
     "release": "npm run sync-dist && npm run build && npm run push-dist"
   },
   "author": "",
