--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
   - "npm run build"
 deploy:
   provider: pages
+  skip_cleanup: true
   github_token: $GITHUB_TOKEN
   local_dir: ./dist
   target_branch: master
