--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Website of Touraine Tech",
   "main": "src/index.js",
   "scripts": {
-    "start" : "poi",
-    "build" : "poi build",
+    "start": "poi",
+    "build": "poi build",
     "to-ghpages": "gh-pages --dist ./dist --branch master",
     "deploy": "npm run build && npm run to-ghpages"
   },
   "author": "Touraine Tech",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.26.0"
+    "core-js": "^2.5.1",
+    "intersection-observer": "^0.4.2",
+    "lozad": "^1.0.2",
+    "promise-polyfill": "^6.0.2"
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.0",
@@ -27,7 +30,7 @@
     "homepage": "./",
     "copy": [
       {
-        "from":"./README.md"
+        "from": "./README.md"
       }
     ],
     "html": {
