--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
     "gh-pages": "^1.0.0",
+    "html-loader": "^0.5.1",
     "node-sass": "^4.5.3",
     "poi": "^9.3.3",
     "sass-loader": "^6.0.6"
@@ -34,7 +35,7 @@
       }
     ],
     "html": {
-      "template": "./src/index.html"
+      "template": "html-loader!./src/index.html"
     }
   }
 }
