--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "core-js": "^2.5.1",
     "intersection-observer": "^0.4.2",
     "lozad": "^1.0.2",
-    "promise-polyfill": "^6.0.2",
-    "svg-inline-loader": "^0.8.0"
+    "promise-polyfill": "^6.0.2"
   },
   "devDependencies": {
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-0": "^6.24.1",
+    "file-loader": "^1.1.5",
     "firebase-tools": "^3.12.0",
     "html-loader": "^0.5.1",
     "node-sass": "^4.5.3",
     "poi": "^9.3.3",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "svg-inline-loader": "^0.8.0"
   },
   "poi": {
     "dist": "./dist",
