--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack-dev-server --config ./build/webpack.config.js",
     "build": "NODE_ENV=production webpack --config ./build/webpack.config.js",
     "to-firebase": "firebase deploy",
-    "deploy": "npm run build && npm run to-firebase"
+    "deploy": "npm run build && npm run to-firebase",
+    "deploy-gh-page": "node ./build/deployGhPages.js"
   },
   "author": "Touraine Tech",
   "license": "MIT",
@@ -22,15 +23,18 @@
     "@babel/preset-env": "^7.0.0-beta.31",
     "@babel/preset-stage-0": "^7.0.0-beta.31",
     "babel-loader": "^8.0.0-beta.0",
+    "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^1.1.5",
     "firebase-tools": "^3.14.0",
+    "gh-pages": "^1.0.0",
     "html-loader": "^0.5.1",
     "html-webpack-inline-svg-plugin": "^0.2.2",
     "html-webpack-plugin": "^2.30.1",
+    "imagemin-webpack-plugin": "^1.5.2",
     "link-media-html-webpack-plugin": "^1.0.1",
     "node-sass": "^4.6.0",
     "postcss-cssnext": "^3.0.2",
