--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./build/webpack.config.js",
-    "build": "NODE_ENV=production webpack --config ./build/webpack.config.js",
+    "build": "NODE_ENV=production webpack -p --config ./build/webpack.config.js",
     "to-firebase": "firebase deploy",
     "deploy": "npm run build && npm run to-firebase",
     "deploy-gh-page": "node ./build/deployGhPages.js"
