--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Website of Touraine Tech",
   "main": "src/index.js",
   "scripts": {
-    "start": "poi",
-    "build": "poi build",
+    "start": "webpack-dev-server --config ./build/webpack.config.js",
+    "build": "NODE_ENV=production webpack -p --config ./build/webpack.config.js",
     "to-firebase": "firebase deploy",
-    "deploy": "npm run build && npm run to-firebase"
+    "deploy": "npm run build && npm run to-firebase",
+    "deploy-gh-page": "node ./build/deployGhPages.js"
   },
   "author": "Touraine Tech",
   "license": "MIT",
@@ -18,32 +19,31 @@
     "promise-polyfill": "^6.0.2"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-0": "^6.24.1",
+    "@babel/core": "^7.0.0-beta.31",
+    "@babel/preset-env": "^7.0.0-beta.31",
+    "@babel/preset-stage-0": "^7.0.0-beta.31",
+    "babel-loader": "^8.0.0-beta.0",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^1.1.5",
-    "firebase-tools": "^3.12.0",
+    "firebase-tools": "^3.14.0",
+    "gh-pages": "^1.0.0",
     "html-loader": "^0.5.1",
-    "node-sass": "^4.5.3",
-    "poi": "^9.3.3",
+    "html-webpack-inline-svg-plugin": "^0.2.2",
+    "html-webpack-plugin": "^2.30.1",
+    "imagemin-webpack-plugin": "^1.5.2",
+    "link-media-html-webpack-plugin": "^1.0.1",
+    "node-sass": "^4.6.0",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
-    "svg-inline-loader": "^0.8.0"
-  },
-  "poi": {
-    "dist": "./dist",
-    "homepage": "./",
-    "copy": [
-      {
-        "from": "./README.md"
-      }
-    ],
-    "html": [
-      {
-        "template": "html-loader?interpolate!./src/index.html"
-      },
-      {
-        "filename": "sponsors.html",
-        "template": "html-loader?interpolate!./src/sponsors.html"
-      }
-    ]
+    "style-loader": "^0.19.0",
+    "svg-inline-loader": "^0.8.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4"
   }
 }
