--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "NODE_ENV=production webpack -p --config ./build/webpack.config.js",
     "to-firebase": "firebase deploy",
     "deploy": "npm run build && npm run to-firebase",
-    "deploy-gh-page": "node ./build/deployGhPages.js"
+    "deploy-gh-page": "node ./build/deployGhPages.js",
+    "deploy-firebase": "firebase deploy --token '$FIREBASE_TOKEN'"
   },
   "author": "Touraine Tech",
   "license": "MIT",
