--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "touraine-tech",
+  "name": "touraine-tech-test",
   "version": "1.0.0",
   "description": "Website of Touraine Tech",
   "main": "src/index.js",
