reoganize the code

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   "license": "MIT",
   "dependencies": {
     "core-js": "^2.5.1",
-    "featherlight": "^1.7.12",
     "intersection-observer": "^0.4.2",
     "lozad": "^1.0.2",
     "moment": "^2.20.1",
+    "picomodal": "^3.0.0",
     "promise-polyfill": "^6.0.2",
     "siema": "^1.4.9"
   },
