--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "core-js": "^2.5.1",
     "intersection-observer": "^0.4.2",
     "lozad": "^1.0.2",
-    "promise-polyfill": "^6.0.2"
+    "moment": "^2.20.1",
+    "picomodal": "^3.0.0",
+    "promise-polyfill": "^6.0.2",
+    "siema": "^1.4.9"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.31",
@@ -35,7 +38,9 @@
     "html-webpack-inline-svg-plugin": "^0.2.2",
     "html-webpack-plugin": "^2.30.1",
     "imagemin-webpack-plugin": "^1.5.2",
+    "js-yaml": "^3.10.0",
     "link-media-html-webpack-plugin": "^1.0.1",
+    "markdown-loader": "^2.0.1",
     "node-sass": "^4.6.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
