--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "deploy": "push-dir --dir=dist --branch=master --cleanup"
+    "deploy": "push-dir --dir=dist --branch=master --cleanup",
+    "extract:speakers": "jq '.documents | map({id: .fields.uid.stringValue, name: .fields.displayName.stringValue, avatar: .fields.photoURL.stringValue, github: .fields.github.stringValue, twitter: .fields.twitter.stringValue, bio: .fields.bio.stringValue, company: .fields.company.stringValue, city: .fields.city.stringValue})' raw_speakers.json > speakers.json"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
