--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "precommit": "npm run lint",
     "deploy": "push-dir --dir=dist --branch=master --cleanup",
     "extract:speakers": "jq '.documents | map({id: .fields.uid.stringValue, name: .fields.displayName.stringValue, avatar: .fields.photoURL.stringValue, github: .fields.github.stringValue, twitter: .fields.twitter.stringValue, bio: .fields.bio.stringValue, company: .fields.company.stringValue, city: .fields.city.stringValue})' raw_speakers.json > speakers.json",
-    "extract:talks": "jq '.documents | map({id: .fields.id.stringValue, createTime: .createTime, updateTime: .updateTime, name: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.title.stringValue, abstract: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.abstract.stringValue, level: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.level.stringValue, format: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.formats.stringValue, categories: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.categories.stringValue, speakers: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.speakers.mapValue.fields})' raw_talks.json > api/talks.json"
+    "extract:talks": "jq '.documents | map({id: .fields.id.stringValue, createTime: .createTime, updateTime: .updateTime, name: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.title.stringValue, abstract: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.abstract.stringValue, level: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.level.stringValue, format: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.formats.stringValue, categories: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.categories.stringValue, speakers: .fields.submissions.mapValue.fields.wghOOf6byfO2nIaZg5wj.mapValue.fields.speakers.mapValue.fields})' raw_talks.json > api/talks.json",
+    "cy:run": "cypress run"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
@@ -24,12 +25,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "cypress": "^3.1.5",
     "eslint": "^5.0.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-vue": "^4.0.0",
     "node-sass": "^4.9.3",
     "nodemon": "^1.11.0",
     "push-dir": "^0.4.1",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "wait-on": "^3.2.0"
   }
 }
