--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.6.0",
+    "@nuxtjs/svg": "^0.1.6",
     "cross-env": "^6.0.0",
     "nuxt": "^2.9.2",
     "showdown": "^1.9.0",
