--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "deploy": "push-dir --dir=dist --branch=master --cleanup",
+    "deploy": "gh-pages -d dist -b master",
     "extract:all": "node conferenceHallJsonCleaner.js",
     "extract:talks": "node conferenceHallJsonTalksExtract.js"
   },
@@ -31,7 +31,7 @@
     "node-fetch": "^2.6.0",
     "node-sass": "^4.13.0",
     "nodemon": "^1.19.2",
-    "push-dir": "^0.4.1",
+    "gh-pages": "^2.1.1",
     "sass-loader": "^8.0.0"
   }
 }
