--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "deploy": "gh-pages -d dist -b master",
+    "deploy": "gh-pages --dotfiles -d dist -b master",
     "extract:all": "node conferenceHallJsonCleaner.js",
     "extract:talks": "node conferenceHallJsonTalksExtract.js"
   },
