--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: 17.x
+          node-version: 16.14.2
       - run: npm ci
       - run: npm run generate
       - uses: FirebaseExtended/action-hosting-deploy@v0
