--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -2,12 +2,7 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on PR
-on:
-  push:
-    # Sequence of patterns matched against refs/heads
-    branches-ignore:
-      - 'develop'
-      - 'master'
+'on': pull_request
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
