--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "extract:all": "node tools/conferenceHallJsonExtractor.js",
     "extract:preBuildPlanning": "node tools/prePlanningBuilder.js",
     "extract:timerDatas": "node tools/timerJsonBuilder.js",
-    "extract:flickr": "node tools/flickr.js",
+    "extract:flickr": "node tools/flickr.mjs",
     "extract:speakersPicture": "node tools/extractSpeakersPictures.mjs"
   },
   "dependencies": {
