--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -8,10 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 16.x
+      - name: Use Node.js 20.7.x
         uses: actions/setup-node@v2
         with:
-          node-version: 16.14.2
+          node-version: 20.7.x
       - run: npm ci
       - run: npm run generate
       - uses: FirebaseExtended/action-hosting-deploy@v0
