--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Benjamin Cousin",
   "private": true,
   "scripts": {
-    "dev": "cross-env HOST=0.0.0.0 PORT=3000 nuxt",
+    "dev": "cross-env HOST=0.0.0.0 PORT=3000 nuxt dev",
     "build": "nuxt build",
     "start": "nuxt start",
     "analyze": "nuxt build --analyze",
@@ -20,26 +20,29 @@
     "extract:speakersPicture": "node tools/extractSpeakersPictures.mjs"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.6.0",
-    "cross-env": "^6.0.0",
-    "nuxt": "^2.9.2",
-    "showdown": "^1.9.0",
+    "@nuxtjs/axios": "^5.13.6",
+    "cross-env": "^7.0.3",
+    "nuxt": "^2.17.1",
+    "showdown": "^2.1.0",
     "smart-app-banner": "^2.0.0",
     "smoothscroll-polyfill": "^0.4.4",
-    "vue-image-lightbox": "^7.0.0",
-    "vue-lazyload": "^1.3.3"
+    "vue-image-lightbox": "^7.2.0",
+    "vue-lazyload": "^1.3.4"
   },
   "devDependencies": {
-    "acorn": "^7.1.1",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.4.0",
-    "eslint-loader": "^3.0.0",
-    "eslint-plugin-vue": "^5.2.3",
-    "fast-xml-parser": "^3.16.0",
-    "gh-pages": "^2.1.1",
-    "node-fetch": "^2.6.1",
-    "node-sass": "^6.0.1",
-    "nodemon": "^1.19.2",
-    "sass-loader": "^10.1.1"
+    "acorn": "^8.10.0",
+    "babel-eslint": "^10.1.0",
+    "defu": "^6.1.2",
+    "eslint": "^7.32.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-vue": "^9.17.0",
+    "fast-xml-parser": "^4.3.1",
+    "gh-pages": "^6.0.0",
+    "node-fetch": "^3.3.2",
+    "node-sass": "^8.0.0",
+    "nodemon": "^3.0.1",
+    "sass": "^1.68.0",
+    "sass-loader": "^10.4.1",
+    "webpack": "^4.47.0"
   }
 }
