--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 20.7.x
           cache: 'npm'
-      - run: npm ci
+      - run: npm install
       - run: npm run generate
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
