--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "cross-env": "^7.0.3",
+    "fs-extra": "^11.2.0",
     "nuxt": "^2.17.1",
     "showdown": "^2.1.0",
     "smart-app-banner": "^2.0.0",
