feat(includeSpeakerTimer) : add timer in the /timer path of the website

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Benjamin Cousin",
   "private": true,
   "scripts": {
+    "predev": "npm run extract:timerDatas",
+    "prebuild": "npm run extract:timerDatas",
     "dev": "cross-env HOST=0.0.0.0 PORT=3000 nuxt dev",
     "build": "nuxt build",
     "start": "nuxt start",
