Feat/include speaker timer (#352)
* feat(includeSpeakerTimer) : in order to have speaker time on the website, rework the script that build the timer json's.

* feat(includeSpeakerTimer) : in order to have speaker time on the website, rework the script that build the timer json's.

* feat(includeSpeakerTimer) : add timer in the /timer path of the website

* feat(includeSpeakerTimer) : add timer in the /timer path of the website

* feat(includeSpeakerTimer) : add timer in the /timer path of the website

* feat(includeSpeakerTimer) : don't forget the days file generation

* feat(includeSpeakerTimer) : don't forget the days file generation

* feat(includeSpeakerTimer) : don't forget the days file generation

* feat(includeSpeakerTimer) : add some style

* feat(includeSpeakerTimer) : add some style

* feat(includeSpeakerTimer) : rework on date comparison

* chore() : update lock file

* feat(includeSpeakerTimer) : blink if remaining time is lower than 10%

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Benjamin Cousin",
   "private": true,
   "scripts": {
+    "predev": "npm run extract:timerDatas",
+    "prebuild": "npm run extract:timerDatas",
+    "pregenerate": "npm run extract:timerDatas",
     "dev": "cross-env HOST=0.0.0.0 PORT=3000 nuxt dev",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -22,8 +25,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "cross-env": "^7.0.3",
+    "fs-extra": "^11.2.0",
+    "nuxt": "^2.17.2",
     "date-fns": "^3.0.6",
-    "nuxt": "^2.17.1",
     "showdown": "^2.1.0",
     "smart-app-banner": "^2.0.0",
     "smoothscroll-polyfill": "^0.4.4",
