--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "showdown": "^2.1.0",
     "smart-app-banner": "^2.0.0",
     "smoothscroll-polyfill": "^0.4.4",
-    "vue-easy-lightbox": "^1.19.0"
+    "vue-easy-lightbox": "^1.19.0",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@nuxt/eslint": "^0.7.5",
     "@pinia/nuxt": "^0.9.0",
+    "@rollup/plugin-yaml": "^4.1.2",
     "acorn": "^8.14.0",
     "defu": "^6.1.4",
     "eslint": "^9.17.0",
