♻️ refactor(openfeedback): rewrite script to use planning source
- Read directly from planning.json instead of schedule.json
- Fix event dates (2026-02-12 and 2026-02-13)
- Fix photoUrl to use public/ instead of assets/
- Add script to planning:all pipeline
- Remove dependency on times.json and rooms.json

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "planning:build": "node tools/build.mjs",
     "planning:validate": "node tools/build.mjs --validate-only",
     "planning:photos": "node tools/photos.mjs",
-    "planning:all": "npm run planning:build && npm run planning:photos",
+    "planning:openfeedback": "node tools/generateOpenfeedback.mjs",
+    "planning:all": "pnpm run planning:build && pnpm run planning:photos && pnpm run planning:openfeedback",
     "extract:timerDatas": "node tools/timerJsonBuilder.mjs",
     "extract:flickr": "node tools/flickr.mjs"
   },
