--- a/api/sponsors.yaml
+++ b/api/sponsors.yaml
@@ -22,3 +22,29 @@
     - id: devops
       title: Ingénieur DevOps H/F
       link: https://neosoft.wd3.myworkdayjobs.com/fr-FR/neo-soft/job/Nosoft-Tours/XMLNAME--CLO--Ingnieur-DevOps_JR101683
+
+- id: acensi
+  name: ACENSI
+  type: silver
+  image: acensi.png
+  link: https://acensi.group/
+  desc: |
+    Créée en 2003 à Paris, ACENSI s'est développée sur la région Centre depuis 2015 autour de ses 2 agences : Orléans et Tours, puis en région Niortaise depuis 2018.
+    <br><br>
+    Spécialisé dans le conseil en systèmes d'information, ACENSI accompagne ses clients dans leurs projets de transformation, depuis la définition des processus et l'analyse des besoins jusqu'au développement et à la maintenance de leur système d'information. Le groupe ACENSI est présent en France comme à l'international avec une expertise métier reconnue notamment dans les télécoms, l'assurance, la finance et l'énergie.
+    <br><br>
+    Nos équipes en région Centre et Niort sont historiquement présentes auprès de l'ensemble des acteurs de l'Assurance et de la Protection Sociale (Assureurs et Bancassureurs, Mutuelles, Groupes de Protection Sociale, Courtiers, Editeurs).
+    <br><br>
+    Nos équipes interviennent particulièrement sur les projets liés :
+    <ul>
+      <li>Au métier : Support, Test/Recette, Pilote de Recette, AMOA, Business Analyst, Product Owner, Chef de Projet, Expert fonctionnel</li>
+      <li>A la technique : Ingénieur d'études, Analyste, Lead Dev, Test Manager, Support MCO</li>
+    </ul>
+    <br>
+    Chez ACENSI, vous bénéficiez d'un suivi individualisé avec votre manager. Des points individuels tout au long de l'année qui vous permettront grâce à nos solutions de formation certifiante de monter en compétences et d'atteindre votre objectif de carrière !
+    <br><br>
+    ACENSI c'est également une société proche de ses consultants, avec l'organisation d'événements (rencontre sportive, afterwork, meetup...) une fois par mois !
+    <br><br>
+    Envie d'en savoir plus ? N'hésitez pas à venir nous voir à notre stand !
+  linkedIn: https://www.linkedin.com/showcase/acensi-centre-ouest/
+  instagram: https://www.instagram.com/acensisana/
