--- a/src-astro/package.json
+++ b/src-astro/package.json
@@ -16,6 +16,7 @@
     "@astrojs/sitemap": "^3.2.0",
     "astro": "^4.16.0",
     "date-fns": "^3.6.0",
+    "marked": "^17.0.1",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
