refactor(types): improve type safety and remove duplications
- Add proper types for conferenceHall.json and schedule.json data
- Remove all 'as any' casts in lib/data.ts (15+ instances removed)
- Centralize getCategoryColor() and getCategoryLabel() in lib/data.ts
- Unify Sponsor/JobOffer types in types.ts with all social media fields
- Update TalkCard and talk/[id] to use centralized category functions
- Remove unused showdown dependency from package.json

--- a/src-astro/package.json
+++ b/src-astro/package.json
@@ -16,12 +16,10 @@
     "@astrojs/sitemap": "^3.2.0",
     "astro": "^4.16.0",
     "date-fns": "^3.6.0",
-    "marked": "^17.0.1",
-    "showdown": "^2.1.0"
+    "marked": "^17.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.1.2",
-    "@types/showdown": "^2.0.6",
     "sass": "^1.80.0",
     "typescript": "^5.6.0"
   }
