--- a/src-astro/package.json
+++ b/src-astro/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-yaml": "^4.1.2",
+    "netlify-cli": "^23.13.4",
     "sass": "^1.80.0",
     "typescript": "^5.6.0"
   }
