--- a/src-astro/src/data/sponsors.yaml
+++ b/src-astro/src/data/sponsors.yaml
@@ -1,13 +1,19 @@
 # Sponsors Touraine Tech
 # Types possibles: gold, silver, bronze, partenaires
 
-- id: techcorp-demo
-  name: TechCorp (Demo)
+- id: harmonie-mutuelle
+  name: Harmonie Mutuelle
   type: gold
-  image: placeholder-gold.png
-  link: https://example.com
+  image: harmonie-mutuelle.png
+  link: https://www.harmonie-mutuelle.fr/
   desc: |
-    Sponsor Gold de démonstration pour tester le design.
+    Harmonie Mutuelle a souhaité être sponsor de Touraine Tech 2019 afin de soutenir une initiative locale sur la ville de Tours.<br><br>
+    En tant qu'employeur IT important sur la ville de Tours, cette participation permet aussi à Harmonie Mutuelle de s'impliquer davantage dans l'écosystème numérique de la région Centre et d'être au plus près des acteurs de l'IT.<br><br>
+    Pour toutes ces raisons Harmonie Mutuelle a de nouveau souhaité être partenaire en 2026.
+  twitter: https://x.com/hmutuelle
+  linkedIn: https://www.linkedin.com/company/harmoniemutuelle
+  youtube: https://www.youtube.com/user/HarmonieMutuelle
+  instagram: https://www.instagram.com/harmoniemutuelle
 
 - id: neosoft
   name: Néosoft
@@ -30,6 +36,21 @@
     - id: devops
       title: Ingénieur DevOps H/F
       link: https://neosoft.wd3.myworkdayjobs.com/fr-FR/neo-soft/job/Nosoft-Tours/XMLNAME--CLO--Ingnieur-DevOps_JR101683
+
+- id: code-troopers
+  name: Code-Troopers
+  type: silver
+  image: codetroopers.png
+  link: https://code-troopers.com
+  desc: |
+    Depuis 2014, Code-Troopers conçoit et réalise des applications web et mobiles sur-mesure pour des PME, scaleups, grands groupes et organismes publics, dans des secteurs variés (mobilité, énergie, santé, événementiel, etc.). Nous intervenons sur l'ensemble du cycle projet (audit, architecture, développement, intégration, mise en production, maintenance) en combinant rigueur, performance, sécurité et scalabilité, pour délivrer des solutions robustes et adaptées aux enjeux stratégiques de nos clients.
+    <br><br>
+    Que ce soit pour monter une équipe projet complète ou venir en renfort des équipes internes, nous adaptons notre accompagnement aux besoins des clients tout en garantissant un haut niveau d'expertise et de flexibilité.
+    <br><br>
+    Nous offrons un environnement à taille humaine, fondé sur la convivialité, le partage et l'exigence de qualité. Nous valorisons l'autonomie, la liberté de choisir ses technologies et son matériel, ainsi qu'un bon équilibre pro/perso. Chaque collaborateur a un rôle concret dans les projets, peut monter en compétences, et contribue à la vie de l'entreprise dans un cadre bienveillant et collaboratif. L'équilibre entre sérieux du travail et moments de convivialité, ainsi que la proximité entre tous les membres de l'équipe, font de Code-Troopers un lieu où l'on vient travailler avec plaisir.
+    <br><br>
+    Code-Troopers est aussi le créateur de la solution Chapitô, qui a servi encore cette année à générer l'application mobile pour Touraine Tech.
+  linkedIn: https://www.linkedin.com/company/codetroopers
 
 - id: acensi
   name: ACENSI
@@ -56,11 +77,3 @@
     Envie d'en savoir plus ? N'hésitez pas à venir nous voir à notre stand !
   linkedIn: https://www.linkedin.com/showcase/acensi-centre-ouest/
   instagram: https://www.instagram.com/acensisana/
-
-- id: startup-demo
-  name: StartupBronze (Demo)
-  type: bronze
-  image: placeholder-bronze.png
-  link: https://example.com
-  desc: |
-    Sponsor Bronze de démonstration pour tester le design.
