✨ feat(sponsors): add Catamania as Bronze sponsor (#463)

--- a/api/sponsors.yaml
+++ b/api/sponsors.yaml
@@ -77,3 +77,58 @@
     Envie d'en savoir plus ? N'hésitez pas à venir nous voir à notre stand !
   linkedIn: https://www.linkedin.com/showcase/acensi-centre-ouest/
   instagram: https://www.instagram.com/acensisana/
+
+- id: catamania
+  name: Catamania
+  type: bronze
+  image: catamania.png
+  link: https://www.catamania.com/
+  desc: |
+    <u>La Société</u>
+    <br><br>
+    Catamania est une société de conseil et de services numériques. Depuis sa création en 1999, nous œuvrons pour réaliser la transformation digitale de nos clients, en mettant à leur disposition nos expertises techniques, métier et méthodologiques.
+    <br><br>
+    Nous nous engageons à leurs côtés pour définir et participer à l'évolution de leur système d'information, de la banque à l'assurance, en passant par la grande distribution, l'industrie et le secteur public.
+    <br><br>
+    Forts de plus de 25 ans d'expérience, nous offrons des solutions sur-mesure en Architecture, Conseil, Étude, Développement, Test, Paramétrage, Pilotage et Cybersécurité, toujours en phase avec les enjeux d'aujourd'hui et de demain.
+    <br><br>
+    Nous agissons pour construire un avenir plus équitable, en mettant l'humain et l'environnement au centre de nos préoccupations. À travers des actions concrètes et engagées, nous cultivons un environnement où l'éthique guide nos choix et où chaque décision a un impact positif, durable et mesurable. En alliant proximité, innovation et développement, nous créons des solutions responsables et adaptées aux enjeux de demain.
+    <br><br>
+    Avec 21 agences en France et à l'international (Luxembourg, Suisse, Maroc et Canada), Catamania place la proximité au cœur de ses actions. C'est la raison pour laquelle chaque implantation est pensée pour renforcer les liens avec nos clients, consultants et partenaires. Cette approche géographique n'est pas seulement une volonté stratégique, mais bien une réalité ancrée sur le terrain, permettant d'être toujours plus proches de ceux avec qui nous collaborons.
+    <br><br>
+    <u>Notre singularité</u>
+    <br><br>
+    Notre singularité est plurielle, car elle bénéficie à chacun : collaborateurs, clients, partenaires et utilisateurs finaux. Nous ne cherchons pas simplement à faire mieux.
+    <br>
+    Nous cherchons à penser autrement, à élever l'humain au cœur de chaque projet, de chaque solution : « DIGITAL process for HUMAN progess ».
+    <br><br>
+    Un engagement profond, une exigence constante, une marque de pensée qui guide toutes nos actions.
+    <br>
+    Elle traduit notre volonté d'excellence, mais aussi notre capacité à créer de la valeur, ensemble, durablement.
+    <br><br>
+    <u>Nos expertises</u>
+    <br><br>
+    La montée en compétences de nos collaborateurs renforce la pertinence de nos solutions. Un lien vertueux, bénéfique pour chacun, valorisant pour tous.
+    <br><br>
+    Nos expertises évoluent en continu. Nous actualisons nos savoir-faire, faisons mûrir nos offres et les confrontons aux réalités du terrain. Une seule source d'inspiration guide cette dynamique : vos aspirations et celles d'un monde en mutation permanente.
+    <br><br>
+    Nous restons en éveil. À l'écoute, en observation, en analyse. Nous ressentons, étudions, déduisons. Rien n'est laissé au hasard. Chaque réflexion s'appuie sur une méthode rigoureuse car progresser exige de cultiver ses propres leviers d'amélioration.
+    <br><br>
+    Nous sommes convaincus que chaque projet mérite une approche unique et sur-mesure. C'est pourquoi nos solutions mêlent expertise technique, compréhension métier et innovation utile.
+    <br>
+    Elles traduisent vos ambitions en réussites concrètes.
+    <br><br>
+    Explorer nos solutions, c'est ouvrir la porte à un univers. Un univers où excellence et valeur construisent un avenir désirable — pour vous, et avec vous.
+    <br><br>
+    <u>Le Programme INNOVIA</u>
+    <br><br>
+    Catamania dispose d'un programme de Recherche & Développement, ouvert à tous ses consultants, baptisé « Innovia ». Ce programme intervient sur différents sujets, comme l'Intelligence Artificielle, le Big Data, la Mobilité, ou les Tests Automatisés. C'est un véritable espace de collaboration où chacun, quel que soit son rôle, peut contribuer activement à des projets porteurs de sens.
+    <br><br>
+    Convaincus que l'engagement et la solidarité sont des moteurs essentiels pour notre développement, nous avons toujours cherché à allier nos expertises techniques et métier à des actions à forte valeur ajoutée pour la société. Dans cette dynamique et à travers notre programme R&D Innovia, nous avons mis en place des mécénats de compétences. Ils permettent à nos collaborateurs de mettre leur savoir-faire au service d'associations et d'initiatives locales. Ainsi chacun a l'opportunité de monter en compétences, de contribuer à des projets porteurs de sens et d'expérimenter des solutions innovantes.
+    <br><br>
+    Vous avez envie d'en savoir plus, alors n'hésitez pas à nous contacter :
+    <br>
+    <a href="https://www.catamania.com/contact/">https://www.catamania.com/contact/</a>
+  twitter: https://x.com/Cat_Amania
+  linkedIn: https://www.linkedin.com/company/cat-amania
+  youtube: https://www.youtube.com/@catamania_esn
