✨ feat(sponsors): add Clever Cloud as Gold sponsor

--- a/api/sponsors.yaml
+++ b/api/sponsors.yaml
@@ -15,6 +15,18 @@
   youtube: https://www.youtube.com/user/HarmonieMutuelle
   instagram: https://www.instagram.com/harmoniemutuelle
 
+- id: clever-cloud
+  name: Clever Cloud
+  type: gold
+  image: clever-cloud.png
+  link: https://www.clever-cloud.com/
+  linkedIn: https://www.linkedin.com/company/clever-cloud/
+  twitter: https://twitter.com/clever_cloudFR
+  twitch: https://www.twitch.tv/clevercloud
+  desc: |
+    <b>Clever Cloud</b> est un PaaS (Platform as a Service) qui simplifie vos releases produit.<br/>Envoyez simplement votre code, et nous nous occupons du reste.<br/><br/>Du déploiement à l'hébergement en passant par le maintien en condition opérationnelle et la scalabilité automatique : tout est intégré. Facile à prendre en main et sans lock-in, Clever Cloud est compatible avec la majorité des technologies du marché.<br/><br/>Enfin un cloud pensé pour les développeurs !
+  jobOffers: []
+
 - id: neosoft
   name: Néosoft
   type: silver
