--- a/api/sponsors.yaml
+++ b/api/sponsors.yaml
@@ -144,3 +144,24 @@
   twitter: https://x.com/Cat_Amania
   linkedIn: https://www.linkedin.com/company/cat-amania
   youtube: https://www.youtube.com/@catamania_esn
+
+- id: ippon
+  name: Ippon Technologies
+  type: bronze
+  image: ippon.png
+  link: https://fr.ippon.tech/
+  linkedIn: https://www.linkedin.com/company/ippon-technologies
+  desc: |
+    Chez Ippon, la tech est une aventure collective où innovation, impact et partage sont au cœur de notre ADN. Cabinet de conseil en Technologie, nous accompagnons chaque année plus de 100 entreprises dans leur transformation numérique.
+    <br><br>
+    Notre expertise s'articule autour de trois visions complémentaires :
+    <br>
+    <b>IA Générative</b>, avec une approche Discovery to Delivery pour transformer les opportunités IA en valeur mesurable,
+    <br>
+    <b>Plateformisation</b>, pour concevoir des plateformes scalables, sécurisées et orientées time-to-market,
+    <br>
+    <b>Modernisation du SI</b>, pour faire évoluer l'existant vers plus d'agilité, de fiabilité et de valeur métier.
+    <br><br>
+    Notre approche va bien au-delà du conseil traditionnel : nous concevons sur-mesure des produits numériques pensés pour répondre précisément aux enjeux de chaque client. Pas de solutions standardisées ou à grande échelle : notre force, c'est le sur-mesure, la co-construction, l'écoute et l'adaptabilité.
+    <br><br>
+    Nous avançons main dans la main avec nos clients, car les meilleures solutions se dessinent souvent en chemin. Ainsi, nous privilégions des méthodes agiles, un fort engagement terrain et une proximité qui font toute la différence.
