✨ feat(sponsors): add emojis to Ippon description

--- a/api/sponsors.yaml
+++ b/api/sponsors.yaml
@@ -156,11 +156,11 @@
     <br><br>
     Notre expertise s'articule autour de trois visions complémentaires :
     <br>
-    <b>IA Générative</b>, avec une approche Discovery to Delivery pour transformer les opportunités IA en valeur mesurable,
+    🤖 <b>IA Générative</b>, avec une approche Discovery to Delivery pour transformer les opportunités IA en valeur mesurable,
     <br>
-    <b>Plateformisation</b>, pour concevoir des plateformes scalables, sécurisées et orientées time-to-market,
+    🚀 <b>Plateformisation</b>, pour concevoir des plateformes scalables, sécurisées et orientées time-to-market,
     <br>
-    <b>Modernisation du SI</b>, pour faire évoluer l'existant vers plus d'agilité, de fiabilité et de valeur métier.
+    🔧 <b>Modernisation du SI</b>, pour faire évoluer l'existant vers plus d'agilité, de fiabilité et de valeur métier.
     <br><br>
     Notre approche va bien au-delà du conseil traditionnel : nous concevons sur-mesure des produits numériques pensés pour répondre précisément aux enjeux de chaque client. Pas de solutions standardisées ou à grande échelle : notre force, c'est le sur-mesure, la co-construction, l'écoute et l'adaptabilité.
     <br><br>
