Fix LinkedIn URL for Catamania

--- a/api/sponsors.yaml
+++ b/api/sponsors.yaml
@@ -142,7 +142,7 @@
     <br>
     <a href="https://www.catamania.com/contact/">https://www.catamania.com/contact/</a>
   twitter: https://x.com/Cat_Amania
-  linkedIn: https://www.linkedin.com/company/cat-amania
+  linkedIn: https://www.linkedin.com/company/catamania
   youtube: https://www.youtube.com/@catamania_esn
 
 - id: ippon
