--- a/api/sponsors.yaml
+++ b/api/sponsors.yaml
@@ -184,3 +184,15 @@
     Notre approche va bien au-delà du conseil traditionnel : nous concevons sur-mesure des produits numériques pensés pour répondre précisément aux enjeux de chaque client. Pas de solutions standardisées ou à grande échelle : notre force, c'est le sur-mesure, la co-construction, l'écoute et l'adaptabilité.
     <br><br>
     Nous avançons main dans la main avec nos clients, car les meilleures solutions se dessinent souvent en chemin. Ainsi, nous privilégions des méthodes agiles, un fort engagement terrain et une proximité qui font toute la différence.
+
+- id: polytechtours
+  name: Polytech'Tours
+  type: partenaires
+  image: logo-polytech-UFR.png
+  link: https://polytech.univ-tours.fr/
+  desc: |
+    L'École polytechnique de l'université de Tours (Polytech Tours) est l'une des 207 écoles d'ingénieurs françaises accréditées au 1er septembre 2022 à délivrer un diplôme d'ingénieur.
+    <br><br>
+    Elle est située à Tours, en Indre-et-Loire, dans la région Centre, plus précisément dans le quartier des Deux-Lions, au sud de la ville. Ses activités sont réparties sur trois sites éloignés de quelques centaines de mètres : site Portalis (départements « informatique », « informatique embarquée » et « premier cycle »), site Dassault (départements « mécanique et conception des systèmes », et « électronique et énergie électrique ») et le site Lesseps (département « Génie de l'aménagement et de l'environnement »).
+    <br><br>
+    Elle fait partie du réseau Polytech, groupement de seize écoles d'ingénieurs internes aux universités. Elle est habilitée par la Commission des titres d'ingénieur et membre de la Conférence des grandes écoles. Composante de l'université de Tours, l'École participe à la notoriété de l'université et aux projets communs développés avec les autres composantes.
